--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -1,14 +1,23 @@
 .header{
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
     padding: 0;
-    margin: 20px 0 20px 0;
-}
-.headerTitle{
-    font-weight: bold;
     margin: 0;
-    padding: 0;
+}
+.blogOwner{
+    font-weight: bold;
+    font-size: 2em;
+    margin: 0;
+    padding-left: 0;
+}
+.rightHeader{
+    width: 40%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
 }
 .nav ul{
     display: flex;
@@ -17,12 +26,29 @@
 .nav li{
     list-style-type: none;
     margin-right: 10px;
+    font-weight: normal;
+    text-transform: uppercase;
+}
+.search{
+    display: flex;
+    flex-direction: row;
+    padding: 0;
 }
 .search button, .search input{
     border: none;
     background: none;
 }
 .search input:focus{
+    display: none;
     outline: none;
-    /*box-shadow: 1px 2px 3px 5px lightblue;*/
+}
+
+@media all and (max-width: 600px) {
+    .header {
+        flex-direction: column;
+    }
+    .rightHeader{
+        width: 100%;
+        justify-content: center;
+    }
 }
