--- a/src/Components/Post/index.css
+++ b/src/Components/Post/index.css
@@ -5,23 +5,29 @@
     margin: 0 0 30px 0;
 }
 .postContent{
-    flex: 1;
+    width: 48%;
 }
 
-.postImage{
-    flex: 1;
+.postImage1{
+    order: 0;
+}
+
+.postImage2{
+    order: 1;
+}
+
+.postImage1, .postImage2{
+    width: 48%;
     height: 300px;
     object-fit: fill;
 }
-.space{
-    width: 5%;
-}
+
 @media all and (max-width: 600px){
     .postView{
         flex-direction: column;
         justify-content: center;
     }
-    .postImage{
+    .postImage1, .postImage2{
         order: 1;
     }
     .postContent{
